<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/app_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/topAppBar"
      android:layout_width="wrap_content"
      android:layout_height="?attr/actionBarSize"
      android:layout_gravity="center_horizontal"
      app:title="@string/splash_title"
      app:titleTextColor="@color/colorWhiteBg" />

  </com.google.android.material.appbar.AppBarLayout>

  <ImageView
    android:id="@+id/icon"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="64dp"
    android:src="@drawable/ic_launcher_big"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/app_bar" />

  <TextView
    android:id="@+id/tv_splash_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:alpha="1"
    android:fontFamily="@font/eczarbold"
    android:lineSpacingExtra="-20dp"
    android:text="@string/splash_text"
    android:textColor="@color/colorAccent"
    android:textSize="32sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/icon" />

  <TextView
    android:id="@+id/tv_notice"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/splash_notice"
    android:textColor="@color/colorDarkBlue"
    android:alpha="0"
    android:textSize="20sp"
    android:padding="16dp"
    android:gravity="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_splash_text" />


  <Button
    android:id="@+id/btLogin"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="64dp"
    android:alpha="0"
    android:text="@string/login"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>