<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@android:color/white">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true">

    <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbarUp"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:background="@color/colorPrimary"
      app:layout_collapseMode="pin"
      app:layout_constraintTop_toTopOf="parent"
      app:title="@string/app_name"
      app:titleTextColor="@color/colorWhiteBg" />

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/tilTitle"
      style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="8dp"
      app:layout_constraintTop_toBottomOf="@id/toolbarUp">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/upload_title"
        android:maxLength="80"
        android:maxLines="2" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/tilBody"
      style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:padding="8dp"
      app:layout_constraintTop_toBottomOf="@id/tilTitle">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/upload_body"
        android:minHeight="100dp"
        android:textColorHint="@color/colorPrimaryDark" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
      android:id="@+id/tvUploadImage"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingStart="16dp"
      android:paddingTop="16dp"
      android:paddingEnd="16dp"
      android:text="@string/upload_image"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tilBody" />

    <ImageView
      android:id="@+id/ivImage"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="16dp"
      android:scaleType="center"
      android:src="@drawable/ic_file_upload_black"
      app:layout_constraintBottom_toTopOf="@id/tvUploadAudio"
      app:layout_constraintTop_toBottomOf="@id/tvUploadImage" />

    <TextView
      android:id="@+id/tvUploadAudio"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingStart="16dp"
      android:paddingTop="16dp"
      android:paddingEnd="16dp"
      android:text="@string/upload_audio"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/ivImage" />

    <ImageView
      android:id="@+id/ivAudio"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="16dp"
      android:scaleType="center"
      android:src="@drawable/ic_file_upload_black"
      app:layout_constraintBottom_toTopOf="@id/tvUploadPdf"
      app:layout_constraintTop_toBottomOf="@id/tvUploadAudio" />


    <TextView
      android:id="@+id/tvUploadPdf"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingStart="16dp"
      android:paddingTop="16dp"
      android:paddingEnd="16dp"
      android:text="Upload PDF"
      android:visibility="gone"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/ivAudio" />

    <ImageView
      android:id="@+id/ivPdf"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="16dp"
      android:scaleType="center"
      android:src="@drawable/ic_file_upload_black"
      android:visibility="gone"
      app:layout_constraintBottom_toTopOf="@id/btUpload"
      app:layout_constraintTop_toBottomOf="@id/tvUploadPdf" />


    <Button
      android:id="@+id/btUpload"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_margin="16dp"
      android:text="@string/upload"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toBottomOf="@id/ivAudio" />


    <ProgressBar
      android:id="@+id/determinateBar"
      style="@android:style/Widget.ProgressBar.Large"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:background="@color/colorTrans"
      android:max="100"
      android:padding="100dp"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>