<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/app_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/topAppBar"
      android:layout_width="wrap_content"
      android:layout_height="?attr/actionBarSize"
      android:layout_gravity="center_horizontal"
      app:title="@string/splash_title"
      app:titleTextColor="@color/colorWhiteBg" />

  </com.google.android.material.appbar.AppBarLayout>

  <TextView
    android:id="@+id/screen_title"
    android:layout_width="match_parent"
    android:layout_height="96dp"
    android:layout_marginStart="18dp"
    android:layout_marginTop="8dp"
    android:fontFamily="@font/eczarbold"
    android:gravity="top"
    android:lineSpacingExtra="-20dp"
    android:text="@string/jai_lahari"
    android:textColor="@color/colorAccent"
    android:textSize="40sp"
    app:layout_constraintTop_toBottomOf="@id/app_bar" />

  <androidx.core.widget.NestedScrollView
    android:id="@+id/nsvHome"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@id/screen_title">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMainList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        tools:listitem="@layout/item_grid">

      </androidx.recyclerview.widget.RecyclerView>

      <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/black" />

      <TextView
        android:id="@+id/tvAddFolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:fontFamily="@font/hindireg"
        android:gravity="center_vertical"
        android:letterSpacing="0.9"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/add_folder"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:visibility="gone" />

      <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/black" />

      <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:fontFamily="@font/hindireg"
        android:gravity="center_vertical"
        android:letterSpacing="0.9"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:visibility="gone" />


      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGreyBg" />
    </LinearLayout>

  </androidx.core.widget.NestedScrollView>

  <View
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@drawable/up_gradient"
    app:layout_constraintTop_toBottomOf="@id/screen_title" />

  <!--<View-->
  <!--android:layout_width="match_parent"-->
  <!--android:layout_height="48dp"-->
  <!--android:background="@drawable/bottom_main_gradient"-->
  <!--app:layout_constraintBottom_toBottomOf="parent" />-->


</androidx.constraintlayout.widget.ConstraintLayout>
